...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tv_filterdrawer_user_label"
        tools:text="1005931"
        />

    <TextView
        android:id="@+id/tv_filterdrawer_user_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginhorizontal_small"
        android:layout_marginStart="@dimen/marginhorizontal_small"
        android:layout_marginTop="@dimen/marginvertical_small"
        app:layout_constraintTop_toTopOf="parent"
...
        app:layout_constraintTop_toBottomOf="@+id/textview_filterdrawer_sorting"
        android:text="@string/mainlist_drawer_sort_manual"
        style="@style/Button"
        />

    <Button
        android:id="@+id/button_filterdrawer_sortname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginhorizontal_normal"
        android:layout_marginStart="@dimen/marginhorizontal_normal"
        android:layout_marginTop="@dimen/marginvertical_small"
        app:layout_constraintLeft_toLeftOf="parent"
...
        app:layout_constraintTop_toBottomOf="@+id/button_filterdrawer_sortmanual"
        android:text="@string/mainlist_drawer_sort_created"
        style="@style/Button"
        />

    <Button
        android:id="@+id/button_filterdrawer_sortmodified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginhorizontal_normal"
        android:layout_marginStart="@dimen/marginhorizontal_normal"
        android:layout_marginTop="@dimen/marginvertical_small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_filterdrawer_sortname"
        android:text="@string/mainlist_drawer_sort_modified"
        style="@style/Button"
        />

    <Button
        android:id="@+id/button_filterdrawer_sortview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginhorizontal_normal"
        android:layout_marginStart="@dimen/marginhorizontal_normal"
        android:layout_marginTop="@dimen/marginvertical_small"
        app:layout_constraintLeft_toRightOf="@+id/button_filterdrawer_sortmodified"
...
        android:text="@string/mainlist_drawer_backup_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_filterdrawer_sortmodified"
        />

    <Button
        android:id="@+id/button_filterdrawer_backupsave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginhorizontal_normal"
        android:layout_marginStart="@dimen/marginhorizontal_normal"
        android:layout_marginTop="@dimen/marginvertical_small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_filterdrawer_backup"
        android:text="@string/mainlist_drawer_backup_save"
        style="@style/Button"
        />

    <Button
        android:id="@+id/button_filterdrawer_backuprestore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginhorizontal_normal"
        android:layout_marginStart="@dimen/marginhorizontal_normal"
        android:layout_marginTop="@dimen/marginvertical_small"
        app:layout_constraintLeft_toRightOf="@+id/button_filterdrawer_backupsave"
...
        android:text="@string/mainlist_drawer_debug_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_filterdrawer_backupsave"
        />

    <Button
        android:id="@+id/button_filterdrawer_fillplaceholders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginhorizontal_normal"
        android:layout_marginStart="@dimen/marginhorizontal_normal"
        android:layout_marginTop="@dimen/marginvertical_small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_filterdrawer_debug"
        android:text="@string/mainlist_drawer_fillplaceholders_title"
        style="@style/Button"
        />

    <Button
        android:id="@+id/button_filterdrawer_deleteall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginhorizontal_normal"
        android:layout_marginStart="@dimen/marginhorizontal_normal"
        android:layout_marginTop="@dimen/marginvertical_small"
        app:layout_constraintLeft_toRightOf="@+id/button_filterdrawer_fillplaceholders"
...
