<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerlayout_itemlist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="InconsistentLayout"> <!-- layout land и обычный действительно немного разные -->

    <FrameLayout
        android:id="@+id/fragmentcontainer_mainactivity"
...
                android:id="@+id/swiperefreshlayout_itemlist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/listview_itemlist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="MainList.List"
                    />

                <include layout="@layout/content_itemlist_empty"/>

            </android.support.v4.widget.SwipeRefreshLayout>

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_item_add"
            android:layout_gravity="bottom|end"
            app:srcCompat="@drawable/ic_add_24dp"
            style="@style/FAB"
            />

    </FrameLayout>
...
