<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Read Later</string>
    <string name="content_authority" translatable="false">com.example.mborzenkov.readlaterlist</string>
    <string name="title_activity_colorpicker">Choose color</string>

    <!-- MainActivity -->
        <!-- Онбординг для пустого списка -->
        <string name="mainlist_empty_label">List is empty</string>
        <string name="mainlist_empty_description">Add something to list with button on bottom right corner.</string>
        <!-- Меню -->
...
        <string name="mainlist_menu_add_placeholders_label">Labeeeeel</string>
        <!-- Снекбары -->
        <string name="snackbar_item_added">Item added</string>
        <string name="snackbar_item_edited">Item edited</string>
        <string name="snackbar_item_removed">Item removed</string>
        <!-- Список -->
        <string name="mainlist_icon_contentdescription">Color</string>
        <!-- Поиск -->
        <string name="searchable_mainlist_hint">Search items</string>
        <string name="mainlist_menu_search">Search</string>
        <!-- Пользователи -->
        <string name="mainlist_user_title">User:</string>
        <string name="mainlist_user_change">(change)</string>
...
        <string name="mainlist_drawer_sort_symb_desc" translatable="false">↑</string>
        <string name="mainlist_drawer_debug_title">Debug options</string>
        <string name="mainlist_drawer_deleteall_title">Delete all</string>
        <string name="mainlist_drawer_fillplaceholders_title">Fill data</string>
        <!-- Бэкап -->
        <string name="mainlist_drawer_backup_title">Backup data</string>
        <string name="mainlist_drawer_backup_save">Save</string>
        <string name="mainlist_drawer_backup_restore">Restore</string>
        <string name="mainlist_drawer_backup_save_question_title">Save to file</string>
        <string name="mainlist_drawer_backup_save_question_text">This action will make backup of db in file. Proceed?</string>
        <string name="mainlist_drawer_backup_restore_question_title">Restore from file</string>
        <string name="mainlist_drawer_backup_restore_question_text">This action will replace everything in db with data in backup file. Are you sure to proceed?</string>
        <!-- Предупреждения -->
...
