...
    android:id="@+id/relaviteLayout_squares"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <ImageButton
        android:id="@+id/imageButton_colored_square"
        style="@style/ColorPicker.ColoredCircle"
        android:background="@drawable/colorpicker_circle"
        android:longClickable="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

...
